<resources>
    <string name="app_name">GeziYorum</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Page</string>
    <string name="sign_in">Sıgn In</string>
    <string name="sign_up">Sıgn Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="take_pic">Take Picture</string>
    <string name="choose_pic">Choose Gallery</string>
    <string name="surname">Surname</string>
    <string name="update">Update</string>
    <string name="get_location">Get Location</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
