<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geziyorum.LoginActivity">

    <EditText
        android:id="@+id/login_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/email"
        android:layout_marginTop="150dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:id="@+id/login_edt_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edt_password"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/login_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="20dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/login_btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginEnd="20dp"
            android:layout_weight="1" />


    </LinearLayout>

    <TextView
        android:id="@+id/login_txt_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:layout_marginTop="22dp"
        android:text="@string/forgot_password" />




</RelativeLayout>
